# graphlib2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  bench.ipynb  large_branched_dag.json  pyproject.toml  requirements-bench.txt  requirements-dev.txt  test.py  test_graphlib.py
.github/workflows/: python.yaml  release.yaml  test-prs.yaml
graphlib2/: __init__.py
python/graphlib2/: __init__.py  _graphlib2.pyi  _types.py  graphlib2.pyi
src/: hashedany.rs  iterable.rs  lib.rs
