[package]
name = "graphlib2"
version = "0.4.7"
edition = "2021"
description = "Rust port of the Python stdlib graphlib modules"
readme = "README.md"
license-file = "LICENSE.txt"

[lib]
name = "graphlib2"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "^0.17.2"
features = ["extension-module", "abi3-py37"]

[package.metadata.maturin]
python-source = "python"
description-content-type = "text/markdown; charset=UTF-8; variant=GFM"
name = "graphlib2._graphlib2"
