[package]
name = "_graphlib2"
version = "0.4.8"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.txt"

[lib]
name = "graphlib2"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "^0.17.2"
features = ["extension-module", "abi3-py37"]

[package.metadata.maturin]
name = "graphlib2._graphlib2"
